--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,4 +15,5 @@ build_script:
   - C:\projects\julia\bin\julia-debug -e "versioninfo(); Pkg.init(); Pkg.clone(pwd(), \"JuMP\"); Pkg.add(\"GLPKMathProgInterface\"); Pkg.add(\"Ipopt\")"
 
 test_script:
-  - C:\projects\julia\bin\julia-debug -e "Pkg.add(\"WinRPM\"); Pkg.checkout(\"WinRPM\", \"tk/close-files\"); Pkg.test(\"JuMP\"); Pkg.rm(\"WinRPM\")"
+  - C:\projects\julia\bin\julia-debug -e "Pkg.add(\"WinRPM\"); Pkg.checkout(\"WinRPM\", \"tk/update-dlls\"); using WinRPM"
+  - C:\projects\julia\bin\julia-debug -e "Pkg.test(\"JuMP\"); Pkg.rm(\"WinRPM\")"
