--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,10 @@ environment:
 #  - JULIAVERSION: "download/win64"
 
 install:
+  - ps: write-host "APPVEYOR_API_URL is " $env:APPVEYOR_API_URL
+  - ps: write-host "APPVEYOR_PROJECT_ID is " $env:APPVEYOR_PROJECT_ID
+  - ps: write-host "APPVEYOR_PROJECT_NAME is " $env:APPVEYOR_PROJECT_NAME
+  - ps: write-host "APPVEYOR_PROJECT_SLUG is " $env:APPVEYOR_PROJECT_SLUG
 # Download most recent Julia Windows binary
   - ps: (new-object net.webclient).DownloadFile($("http://status.julialang.org/"+$env:JULIAVERSION), "C:\projects\julia-binary.exe")
 # Run installer silently, output to C:\projects\julia
