--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,8 @@ install:
   - ps: write-host "APPVEYOR_PROJECT_NAME is " $env:APPVEYOR_PROJECT_NAME
   - ps: write-host "APPVEYOR_PROJECT_SLUG is " $env:APPVEYOR_PROJECT_SLUG
   - ps: write-host "APPVEYOR_JOB_ID is " $env:APPVEYOR_JOB_ID
+  - ps: write-host "APPVEYOR_BUILD_NUMBER is " $env:APPVEYOR_BUILD_NUMBER
+  - ps: write-host "APPVEYOR_PULL_REQUEST_NUMBER is " $env:APPVEYOR_PULL_REQUEST_NUMBER
   - ps: if ($env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
         https://ci.appveyor.com/api/projects/tkelman/$env:APPVEYOR_PROJECT_SLUG/history?recordsNumber=50).builds | `
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { exit }
