--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,14 +7,12 @@ environment:
 #  - JULIAVERSION: "download/win32"
 #  - JULIAVERSION: "download/win64"
 
+branches:
+  only:
+    - master
+    - av-test
+
 install:
-  - ps: write-host "APPVEYOR_API_URL is " $env:APPVEYOR_API_URL
-  - ps: write-host "APPVEYOR_PROJECT_ID is " $env:APPVEYOR_PROJECT_ID
-  - ps: write-host "APPVEYOR_PROJECT_NAME is " $env:APPVEYOR_PROJECT_NAME
-  - ps: write-host "APPVEYOR_PROJECT_SLUG is " $env:APPVEYOR_PROJECT_SLUG
-  - ps: write-host "APPVEYOR_JOB_ID is " $env:APPVEYOR_JOB_ID
-  - ps: write-host "APPVEYOR_BUILD_NUMBER is " $env:APPVEYOR_BUILD_NUMBER
-  - ps: write-host "APPVEYOR_PULL_REQUEST_NUMBER is " $env:APPVEYOR_PULL_REQUEST_NUMBER
   - ps: if ($env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
         https://ci.appveyor.com/api/projects/tkelman/$env:APPVEYOR_PROJECT_SLUG/history?recordsNumber=50).builds | `
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
