--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,9 +10,10 @@ environment:
 branches:
   only:
     - master
+    - av-test
 
 install:
-  - ps: if ($env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
+  - ps: if ($env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
         https://ci.appveyor.com/api/projects/tkelman/$env:APPVEYOR_PROJECT_SLUG/history?recordsNumber=50).builds | `
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
         throw "There are newer queued builds for this pull request, failing early." }
